[package]
name = "vm"
version = "0.1.0"
authors = ["aprokurov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
simple_logger = "*"
parking_lot = { version = "0.11", optional = true }
flume = { git = "https://github.com/zesterer/flume", branch = "flavour-refactor", default-features = false, optional = true }
log = { version = "0.4", optional = true }
[features]
concurrent = ["parking_lot", "flume", "incremental"]
default = ["incremental", "logging"]
incremental = []
# Enable runtime checks for non-concurrent mutexes and rwlocks
rt-checks = []
logging = ["log"]

[build-dependencies]
cc = "1"
