[package]
name = "garbage-collector"
version = "0.1.0"
authors = ["aprokurov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
parking_lot = "0.11"
scoped_threadpool = "0.1"
num_cpus =  "1"
once_cell = "1.4"
[features]
secure = []
default = ["secure"]

[build-dependencies]
cc = "1"
cmake = "0.1"

[profile.release]
debug = true
codegen-units = 2
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "gcbench"
harness = false